chore: fix remaining trivial vulnerabilities