@@ -9,7 +9,6 @@ import jakarta.inject.Inject;
 import jakarta.persistence.EntityManager;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ApplicationScoped
 public class ReportsSnapshotRepositoryImpl
@@ -20,16 +19,14 @@ public class ReportsSnapshotRepositoryImpl
     @Override
     public List<PeriodReportsByHospitalResponse> getPeriodReports(
             Integer idHospital, LocalDate startDate, LocalDate endDate) {
-        List<Object[]> rows = em.createQuery(
-                        """
-                                SELECT rs.snapshotDate, SUM(rs.dailyReports)
-                                FROM ReportsSnapshotEntity rs
-                                WHERE rs.hospital.id = :idHospital
-                                  AND rs.snapshotDate BETWEEN :startDate AND :endDate
-                                GROUP BY rs.snapshotDate
-                                ORDER BY rs.snapshotDate ASC
-                                """,
-                        Object[].class)
+        List<Object[]> rows = em.createQuery("""
+            SELECT rs.snapshotDate, SUM(rs.dailyReports)
+            FROM ReportsSnapshotEntity rs
+            WHERE rs.hospital.id = :idHospital
+              AND rs.snapshotDate BETWEEN :startDate AND :endDate
+            GROUP BY rs.snapshotDate
+            ORDER BY rs.snapshotDate ASC
+            """, Object[].class)
                 .setParameter("idHospital", idHospital)
                 .setParameter("startDate", startDate)
                 .setParameter("endDate", endDate)
@@ -37,6 +34,6 @@ public class ReportsSnapshotRepositoryImpl
 
         return rows.stream()
                 .map(r -> new PeriodReportsByHospitalResponse((LocalDate) r[0], ((Number) r[1]).intValue()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
